Set perm size to be able to run against nexus professional bundle
Signed-off-by: Alin Dreghiciu <adreghiciu@gmail.com>